# qwen3-tts

./: .gitignore  LICENSE  install.sh  package-lock.json  package.json  qwen3-tts.code-workspace
client/: package-lock.json  package.json
inference-asr/: argv.py  asr.py  index.py  install.sh  main.py  output_channel.py  program.py  pyproject.toml  requirements.txt  transcribe.py
inference-tts/: argv.py  index.py  install.sh  program.py  pyproject.toml  requirements.txt  tts.py
python-utils/: README.md  pyproject.toml
python-utils/src/ndjson_cli/: __init__.py  cli.py  encoder.py  fd_intercept.py  interceptors.py  logging_handler.py  record.py  timeutil.py  types.py
server/: .gitignore  package-lock.json  package.json  tsconfig.json
server/src/: index.ts  tts.ts
server/src/inference/: index.ts  inference-tts.ts  inference.test.ts  inference.ts  ndjson-data.ts  ndjson.test.ts  ndjson.ts
server/src/utils/daemon/: daemon.ts  index.ts  inference-asr.ts  inference-tts.ts
server/src/utils/daemon/interfaces/: index.ts  transcription.ts
server/src/utils/wave/: index.ts  normalize.vst.ts  resampler.vst.ts  wave.ts
server/src/utils/wave-merger/: index.ts  wave-merger.ts
server/src/utils/wave-merger/interfaces/: index.ts  wave-data.ts
server/src/utils/wave/interfaces/: index.ts  wave-object.ts  wave-parameters.ts  wave-vst.ts
