[project]
name = "inference-tts"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "torchvision",
    "qwen-tts",
    "soundfile",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
