[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-utils"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "SleepWritten"}]
dependencies = []

[project.urls]
Homepage = "https://example.invalid"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]